# datalog

./: .gitignore  build.linux.txt  build.ninja  conanfile.txt  datalog.h  grammar.cpp  grammar.h  lexer.cpp  lexer.h  main.cpp  meson.build  token.cpp  token.h  util.cpp  util.h
parser/: parser.cpp  parser.h  token.cpp
src/: main.cpp
src/parser/: grammar.cpp  grammar.h  lexer.cpp  lexer.h  token.cpp  token.h
test/: test-lab1.cpp
